--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quote-gen",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lindsey-lansford.github.io/quote-gen",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,8 +14,10 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-  },
+  },  
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
