--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-  },  
+  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
